--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Nexus L1 Multi-Node (Final Absolute Path)
+name: Nexus L1 Multi-Node (Full-Auto)
 
 on:
   schedule:
@@ -12,7 +12,7 @@ jobs:
       matrix:
         include:
           - node_index: 1
-            node_id: "37717766"
+            node_id: "37597921"
           # - node_index: 2
           #   node_id: "YOUR_KEY_2"
           # - node_index: 3
@@ -33,7 +33,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential pkg-config libssl-dev git protobuf-compiler curl
 
-      - name: Install and Configure Nexus
+      - name: Install and Forced-Register Nexus
         env:
           NONINTERACTIVE: 1
         run: |
@@ -42,21 +42,14 @@ jobs:
           chmod +x install.sh
           yes "" | ./install.sh || true
           
-          # 2. Determine the correct directory (it's usually .nexus)
-          mkdir -p ~/.nexus
+          # 2. Define binary path
+          NEXUS_BIN="/home/runner/.nexus/bin/nexus-cli"
           
-          # 3. Inject the Node ID directly into the config file
-          # We use a broader JSON structure to satisfy all registration checks
-          cat <<EOF > ~/.nexus/config.json
-          {
-            "node_id": "${{ matrix.node_id }}",
-            "prover_id": "${{ matrix.node_id }}",
-            "user_registered": true,
-            "node_registered": true
-          }
-          EOF
-
-          # 4. Run the node using the direct absolute path to the binary
-          # The installer puts it in $HOME/.nexus/bin/nexus-cli
+          # 3. Use the CLI's own registration commands to fill the config
+          # This ensures the CLI 'approves' of the configuration
+          echo "Registering Node ${{ matrix.node_index }}..."
+          $NEXUS_BIN register-node "${{ matrix.node_id }}" || echo "ID already set or registration failed."
+          
+          # 4. Run in foreground
           echo "Starting Node ${{ matrix.node_index }}..."
-          timeout 345m /home/runner/.nexus/bin/nexus-cli start || echo "Node cycle ended."
+          timeout 345m $NEXUS_BIN start || echo "Node session finished."
