--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,67 +1,66 @@
-name: Nexus L1 Multi-Node (Final Fix)
+name: Nexus L1 Multi-Node (New Nexus-Network)
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *' # Every 6 hours
   workflow_dispatch:
 
 jobs:
-  run-nexus-nodes:
+  run-nexus:
     strategy:
       fail-fast: false
       matrix:
         include:
           - node_index: 1
-            node_id: "37597921" # Your actual ID from the logs
+            node_id: "37597921"
           # - node_index: 2
-          #   node_id: "..."
+          #   node_id: "YOUR_NODE_ID_2"
           # - node_index: 3
-          #   node_id: "..."
+          #   node_id: "YOUR_NODE_ID_3"
           # - node_index: 4
-          #   node_id: "..."
+          #   node_id: "YOUR_NODE_ID_4"
           # - node_index: 5
-          #   node_id: "..."
+          #   node_id: "YOUR_NODE_ID_5"
           # - node_index: 6
-          #   node_id: "..."
+          #   node_id: "YOUR_NODE_ID_6"
 
     runs-on: ubuntu-latest
-    timeout-minutes: 355 
+    timeout-minutes: 355
 
     steps:
       - name: Install System Dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential pkg-config libssl-dev git protobuf-compiler curl
+          sudo apt update
+          sudo apt install -y build-essential pkg-config libssl-dev git protobuf-compiler curl
 
-      - name: Install and Forced-Register Nexus
+      - name: Install Rust and RISC-V Target
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source $HOME/.cargo/env
+          rustup target add riscv32i-unknown-none-elf
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: Install Nexus Network
+        run: |
+          # The new installation script for nexus-network
+          curl https://cli.nexus.xyz/ | sh
+          # Ensure the binary is in the PATH
+          echo "$HOME/.nexus/bin" >> $GITHUB_PATH
+
+      - name: Run Node
         env:
           NONINTERACTIVE: 1
-          # REPLACE THIS WITH YOUR REAL WALLET ADDRESS
-          WALLET: "0xd5c41AEBC800EeF7Ca0008d9Da4cd151CE4DF183" 
+          WALLET: "0xd5c41AEBC800EeF7Ca0008d9Da4cd151CE4DF183"
         run: |
-          # 1. Install Nexus CLI
-          curl -sSf https://cli.nexus.xyz/ -o install.sh
-          chmod +x install.sh
-          yes "" | ./install.sh || true
+          # 1. Force refresh path
+          export PATH=$PATH:$HOME/.nexus/bin
           
-          NEXUS_BIN="/home/runner/.nexus/bin/nexus-cli"
+          # 2. Register User (Wallet)
+          # We use || true because it might already be registered in the shared session
+          nexus-network register-user --wallet-address $WALLET || echo "Wallet already linked."
+
+          # 3. Run the node in the foreground
+          echo "Starting Node ${{ matrix.node_index }} with ID: ${{ matrix.node_id }}"
           
-          # 2. Ensure directories exist
-          mkdir -p ~/.nexus
-          
-          # 3. Manually create the config file with the correct JSON structure
-          # This avoids the "Invalid wallet address" error during CLI registration
-          # because we are writing it directly.
-          cat <<EOF > ~/.nexus/config.json
-          {
-            "node_id": "${{ matrix.node_id }}",
-            "wallet_address": "$WALLET",
-            "user_registered": true
-          }
-          EOF
-          
-          echo "Configuration force-injected for Node ${{ matrix.node_index }} with ID: ${{ matrix.node_id }}"
-          
-          # 4. Start the node in the foreground
-          echo "Starting Node ${{ matrix.node_index }}..."
-          timeout 345m $NEXUS_BIN start || echo "Node session cycle finished."
+          # We use the specific node-id flag provided in your documentation
+          timeout 345m nexus-network start --node-id ${{ matrix.node_id }} || echo "Cycle finished."
