--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Nexus L1 Multi-Node (New Nexus-Network)
+name: Nexus L1 Multi-Node (Headless Fix)
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # Every 6 hours
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
@@ -14,15 +14,15 @@ jobs:
           - node_index: 1
             node_id: "37597921"
           # - node_index: 2
-          #   node_id: "YOUR_NODE_ID_2"
+          #   node_id: "YOUR_ID_2"
           # - node_index: 3
-          #   node_id: "YOUR_NODE_ID_3"
+          #   node_id: "YOUR_ID_3"
           # - node_index: 4
-          #   node_id: "YOUR_NODE_ID_4"
+          #   node_id: "YOUR_ID_4"
           # - node_index: 5
-          #   node_id: "YOUR_NODE_ID_5"
+          #   node_id: "YOUR_ID_5"
           # - node_index: 6
-          #   node_id: "YOUR_NODE_ID_6"
+          #   node_id: "YOUR_ID_6"
 
     runs-on: ubuntu-latest
     timeout-minutes: 355
@@ -42,25 +42,23 @@ jobs:
 
       - name: Install Nexus Network
         run: |
-          # The new installation script for nexus-network
           curl https://cli.nexus.xyz/ | sh
-          # Ensure the binary is in the PATH
           echo "$HOME/.nexus/bin" >> $GITHUB_PATH
 
-      - name: Run Node
+      - name: Run Node in Headless Mode
         env:
           NONINTERACTIVE: 1
+          # Use your actual wallet address
           WALLET: "0x277765Ccac394dd3787397DeE7E9f69F3C985019"
+          # Mock a terminal to prevent OS Error 6
+          TERM: xterm
         run: |
-          # 1. Force refresh path
           export PATH=$PATH:$HOME/.nexus/bin
           
-          # 2. Register User (Wallet)
-          # We use || true because it might already be registered in the shared session
+          echo "Registering Wallet..."
           nexus-network register-user --wallet-address $WALLET || echo "Wallet already linked."
 
-          # 3. Run the node in the foreground
-          echo "Starting Node ${{ matrix.node_index }} with ID: ${{ matrix.node_id }}"
+          echo "Starting Node ${{ matrix.node_index }} in Headless Mode..."
           
-          # We use the specific node-id flag provided in your documentation
-          timeout 345m nexus-network start --node-id ${{ matrix.node_id }} || echo "Cycle finished."
+          # Added --headless to skip the TUI dashboard that causes the crash
+          timeout 345m nexus-network start --node-id ${{ matrix.node_id }} --headless || echo "Session cycle finished."
