--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,16 @@ jobs:
         include:
           - node_index: 1
             node_id: "37597921"
-          # - node_index: 2
-          #   node_id: "YOUR_ID_2"
-          # - node_index: 3
-          #   node_id: "YOUR_ID_3"
-          # - node_index: 4
-          #   node_id: "YOUR_ID_4"
-          # - node_index: 5
-          #   node_id: "YOUR_ID_5"
-          # - node_index: 6
-          #   node_id: "YOUR_ID_6"
+          - node_index: 2
+            node_id: "37717766"
+          - node_index: 3
+            node_id: "37658056"
+          - node_index: 4
+            node_id: "37567545"
+          - node_index: 5
+            node_id: "37687579"
+          - node_index: 6
+            node_id: "37567546"
 
     runs-on: ubuntu-latest
     timeout-minutes: 355
